--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@mts/ui",
-  "version": "1.0.0",
+  "name": "@chernyshovaalexandra/mtsui",
+  "version": "1.0.2",
   "main": "dist/index.js",
   "private": false,
   "scripts": {
