--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,25 @@
 {
-    "compilerOptions": {
-      "target": "ES2020",    
-      "types": ["mdx", "node"],                      
-      "module": "Node16",                          
-      "lib": ["DOM", "DOM.Iterable", "ESNext"],    
-      "jsx": "react-jsx",                          
-      "declaration": true,                         
-      "declarationMap": true,                      
-      "sourceMap": true,                           
-      "outDir": "dist",                            
-      "strict": true,                              
-      "moduleResolution": "node16",
-      "resolveJsonModule": true,                   
-      "isolatedModules": true,                     
-      "esModuleInterop": true,                    
-      "skipLibCheck": true,                        
-      "forceConsistentCasingInFileNames": true,     
-    },
-    "include": ["src"],
-    "exclude": ["node_modules", "dist"]
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "ESNext",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "jsx": "react-jsx",
+    "sourceMap": true,
+    "declaration": true,
+    "declarationDir": "dist/types",
+    "emitDeclarationOnly": false,
+    "outDir": "dist",
+    "strict": true,
+    "esModuleInterop": true,
+    "moduleResolution": "Node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitAny": true,
+    "noFallthroughCasesInSwitch": true,
+    "types": []
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
