--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chernyshovaalexandra/mtsui",
-  "version": "1.1.0",
+  "version": "1.1.2",
   "private": false,
   "description": "UI-компоненты для MTS-проектов",
   "author": "Alexandra Chernyshova",
@@ -28,7 +28,7 @@
     "build-storybook": "storybook build",
     "deploy-storybook": "storybook-to-ghpages"
   },
-  "dependencies": {
+  "peerDependencies": {
     "antd": "^5.24.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -48,10 +48,12 @@
     "@types/styled-components": "^5.1.35",
     "@vitest/browser": "^1.4.0",
     "@vitest/coverage-v8": "^1.4.0",
+    "antd": "^5.24.7",
     "rollup": "^4.40.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "storybook-deployer": "^2.8.12",
+    "tslib": "^2.8.1",
     "typescript": "^5.3.3",
     "vitest": "^1.4.0"
   }
