--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chernyshovaalexandra/mtsui",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "private": false,
   "description": "UI-компоненты для MTS-проектов",
   "author": "Alexandra Chernyshova",
@@ -40,8 +40,11 @@
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.2",
-    "@storybook/addon-essentials": "^8.0.0",
-    "@storybook/react": "^8.0.0",
+    "@storybook/addon-essentials": "^8.6.12",
+    "@storybook/cli": "^8.6.12",
+    "@storybook/preset-create-react-app": "^8.6.12",
+    "@storybook/react": "^8.6.12",
+    "@storybook/react-vite": "^8.6.12",
     "@types/aria-query": "^5.0.4",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
@@ -54,7 +57,11 @@
     "rollup-plugin-postcss": "^4.0.2",
     "storybook-deployer": "^2.8.12",
     "tslib": "^2.8.1",
-    "typescript": "^5.3.3",
+    "typescript": "^5.8.3",
+    "vite": "^6.2.6",
     "vitest": "^1.4.0"
+  },
+  "dependencies": {
+    "styled-components": "^6.1.17"
   }
 }
