--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chernyshovaalexandra/mtsui",
-  "version": "1.1.11",
+  "version": "1.1.12",
   "private": false,
   "description": "UI-компоненты для MTS-проектов",
   "author": "Alexandra Chernyshova",
@@ -62,6 +62,7 @@
     "vitest": "^1.4.0"
   },
   "dependencies": {
+    "lucide-react": "^0.488.0",
     "react-router-dom": "^7.5.0",
     "styled-components": "^6.1.17"
   }
