--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "styled-components": "^6.1.7"
+    "styled-components": "^6.1.7",
+    "framer-motion": "^10.12.14"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.3",
@@ -62,6 +63,7 @@
     "vitest": "^1.4.0"
   },
   "dependencies": {
+    "framer-motion": "^12.7.5",
     "lucide-react": "^0.488.0",
     "react-router-dom": "^7.5.0",
     "styled-components": "^6.1.17"
