--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chernyshovaalexandra/mtsui",
-  "version": "1.2.10",
+  "version": "1.2.11",
   "private": false,
   "description": "UI-компоненты для MTS-проектов",
   "author": "Alexandra Chernyshova",
@@ -30,11 +30,11 @@
   },
   "peerDependencies": {
     "antd": "^5.24.6",
+    "framer-motion": "^10.12.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "styled-components": "^6.1.7",
-    "framer-motion": "^10.12.14"
+    "styled-components": "^6.1.7"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.3",
