--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chernyshovaalexandra/mtsui",
-  "version": "1.3.18",
+  "version": "1.4.0",
   "private": false,
   "description": "UI-компоненты для MTS-проектов",
   "author": "Alexandra Chernyshova",
@@ -66,6 +66,7 @@
     "framer-motion": "^12.7.5",
     "lucide-react": "^0.488.0",
     "react-router-dom": "^7.5.0",
+    "react-select": "^5.10.1",
     "styled-components": "^6.1.17"
   }
 }
