--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "exports": {
     ".": {
       "import": "./dist/index.esm.js",
-      "require": "./dist/index.cjs.js",
-      "types": "./dist/types/index.d.ts"
+      "require": "./dist/index.cjs.js"
     }
   },
   "publishConfig": {
@@ -42,6 +41,7 @@
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.2",
+    "@storybook/addon-a11y": "8.6.12",
     "@storybook/addon-essentials": "^8.6.12",
     "@storybook/cli": "^8.6.12",
     "@storybook/preset-create-react-app": "^8.6.12",
