--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "exports": {
     ".": {
       "import": "./dist/index.esm.js",
-      "require": "./dist/index.cjs.js"
+      "require": "./dist/index.cjs.js",
+      "types": "./dist/types/index.d.ts"
     }
   },
   "publishConfig": {
